# ETS_CookBook

./: .gitignore  404.html  README.md  Standard_Excel.xlsm  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  test.toml
check_if_folder_exists/: index.html
clear_word_document/: index.html
database_tables_columns/: index.html
dataframe_from_Excel_table_name/: index.html
dataframe_to_Excel/: index.html
dataframes_from_query_list/: index.html
delete_word_element/: index.html
docs/: check_if_folder_exists.md  clear_word_document.md  database_tables_columns.md  dataframe_from_Excel_table_name.md  dataframe_to_Excel.md  dataframes_from_query_list.md  delete_word_element.md  download_and_save_file.md  from_grib_to_dataframe.md  get_RGB_from_name.md  get_extra_colors.md  get_map_area_data.md  get_map_borders_data.md  get_map_points_data.md  get_nested_values.md  get_rgb_255_code_string.md  get_season.md  index.md  make_cell_text_vertical.md  make_quantity_map.md  make_query_filter.md  make_sankey.md  make_spider_chart.md  map_grid.md  parameters_from_TOML.md  put_dataframe_in_sql_in_chunks.md  put_dataframe_in_word_document.md  put_plots_on_map.md  query_list_from_file.md  read_query_generator.md  read_table_from_database.md  reference_scale.md  register_color_bars.md  rgb_color_list.md  rgba_code_color.md  save_dataframe.md  save_figure.md  set_nested_value.md  string_to_float.md  update_database_table.md
download_and_save_file/: index.html
from_grib_to_dataframe/: index.html
get_RGB_from_name/: index.html
get_extra_colors/: index.html
get_map_area_data/: index.html
get_map_borders_data/: index.html
get_map_points_data/: index.html
get_nested_values/: index.html
get_rgb_255_code_string/: index.html
get_season/: index.html
make_cell_text_vertical/: index.html
make_quantity_map/: index.html
make_query_filter/: index.html
make_sankey/: index.html
make_spider_chart/: index.html
map_grid/: index.html
parameters_from_TOML/: index.html
put_dataframe_in_sql_in_chunks/: index.html
put_dataframe_in_word_document/: index.html
put_plots_on_map/: index.html
query_list_from_file/: index.html
read_query_generator/: index.html
read_table_from_database/: index.html
reference_scale/: index.html
register_color_bars/: index.html
rgb_color_list/: index.html
rgba_code_color/: index.html
save_dataframe/: index.html
save_figure/: index.html
search/: search_index.json
set_nested_value/: index.html
site/: index.html  search.html
using/: index.html
(+30 files in other folders)
