[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'



[project]
name = 'ETS_CookBook'
version = '1.0.14'
authors = [
  { name='Omar Usmani', email='Omar.Usmani@TNO.nl' },
]
description = 'The ETS (TNO) CookBook of useful Python Scripts'
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]


dynamic = ['dependencies']
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
'Homepage' = 'https://github.com/TNO/ETS_CookBook'
